Corrected issue where graphic btn is stretched

--- a/widgets/th-button/styles/button.css
+++ b/widgets/th-button/styles/button.css
@@ -3,3 +3,8 @@
     margin-top:2px;
     margin-left:8px;
 }
+
+.th-btn.btn-image img {
+    height:auto;
+    width:auto;
+}
